<resources>
    <string name="app_name">Pandemic Fighters</string>
    <string name="report_virus">Report Virus</string>
    <string name="notifications">Notifications</string>
    <string name="closest_location">Closest Location</string>
    <string name="recent_date">Recent Date</string>
    <string name="sort_by">Sort by:</string>
    <string name="title_location_permission">Title</string>
    <string name="text_location_permission">Description</string>
    <string name="ok">Ok</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_share_location">Please share your location to interact with Pandemic App</string>
    <string name="edit">Edit</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="report_new_case">Report New Case</string>
    <string name="location">Location: </string>
    <string name="choose_location">Choose location</string>
    <string name="set_location">Set location of virus by moving the map or searching by name</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="location_not_found">Location not found</string>
    <string name="successfully_reported">Successfully reported!</string>
    <string name="where_is_the_virus">Where is the virus?</string>
</resources>