<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin24"
            android:layout_marginBottom="@dimen/margin30"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin10"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvChosenLocation"
                    android:layout_width="0dp"
                    android:layout_marginEnd="@dimen/margin10"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:text="@string/choose_location"
                    android:textColor="@color/secondary_color" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnEdit"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_button"
                    android:elevation="0dp"
                    android:maxLines="1"
                    android:text="@string/edit"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:textSize="@dimen/textSize14" />

            </LinearLayout>

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin15"
                android:layout_marginBottom="@dimen/margin30"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:gravity="top|start"
                android:hint="@string/enter_your_message"
                android:inputType="textMultiLine"
                android:isScrollContainer="false"
                android:paddingHorizontal="@dimen/margin24"
                android:paddingVertical="@dimen/margin24"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_text_color"
                android:textSize="@dimen/textSize14" />

            <com.android.pandemic.fighters.utils.PrimaryButton
                android:id="@+id/btnAddNewCase"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:isActive="false"
                app:text="@string/report_new_case" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_white"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:paddingTop="@dimen/margin30">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/margin24"
                android:layout_weight="1"
                android:padding="@dimen/margin15"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@+id/tvReportVirusTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvReportVirusTitle"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tvReportVirusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_virus"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>