<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/margin2"
        android:minHeight="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin12"
            android:layout_marginEnd="@dimen/margin12"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin10"
                android:text="@string/sort_by"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize14" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipFilters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checkedChip="@id/chipRecentDate"
                app:chipSpacing="8dp"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true"
                tools:visibility="visible">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipRecentDate"
                    style="@style/ChipDefaultSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin30"
                    android:layout_marginEnd="@dimen/margin6"
                    android:layout_weight="1"
                    android:tag="RECENT_DATE"
                    android:text="@string/recent_date"
                    android:textAlignment="center"
                    android:textColor="@color/text_state"
                    android:textSize="@dimen/textSize14"
                    app:chipBackgroundColor="@color/chip_state"
                    app:chipCornerRadius="@dimen/cardViewRadius"
                    app:chipMinTouchTargetSize="0dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipClosestLocation"
                    style="@style/ChipDefaultSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin30"
                    android:layout_marginEnd="@dimen/margin6"
                    android:layout_weight="1"
                    android:tag="CLOSEST_LOCATION"
                    android:text="@string/closest_location"
                    android:textAlignment="center"
                    android:textColor="@color/text_state"
                    android:textSize="@dimen/textSize14"
                    app:chipBackgroundColor="@color/chip_state"
                    app:chipCornerRadius="@dimen/cardViewRadius"
                    app:chipMinTouchTargetSize="0dp" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:nestedScrollingEnabled="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="10"
        tools:listitem="@layout/view_item_list" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>