<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="1dp"
        android:paddingBottom="@dimen/margin15"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:paddingTop="@dimen/margin30">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/margin24"
                android:layout_weight="1"
                android:padding="@dimen/margin15"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@+id/tvReportVirusTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvReportVirusTitle"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tvReportVirusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_virus"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin40"
                android:layout_marginTop="@dimen/margin10"
                android:gravity="center"
                android:text="@string/set_location"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/textSize14"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvReportVirusTitle" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginHorizontal="@dimen/margin30"
                android:layout_marginTop="@dimen/margin15"
                android:background="@drawable/rounded_button"
                android:gravity="center|start"
                android:minHeight="@dimen/margin15"
                android:visibility="visible"
                app:searchIcon="@drawable/ic_search"
                android:paddingHorizontal="@dimen/margin12"
                android:theme="@style/CustomSearchViewStyle"
                app:autoShowKeyboard="true"
                app:defaultQueryHint="@string/search"
                app:iconifiedByDefault="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                app:queryBackground="@android:color/transparent"
                app:queryHint="@string/search"
                app:showAsAction="always|collapseActionView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>